move stuff around

--- a/about.html
+++ b/about.html
@@ -178,10 +178,10 @@ $(document).ready(function () {
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="index.html">Home</a>
+  <a href="index.html">Lessons and examples</a>
 </li>
 <li>
-  <a href="topic-index.html">Lessons and examples</a>
+  <a href="more-resources.html">More resources</a>
 </li>
 <li>
   <a href="slides.html">Slides</a>
@@ -205,12 +205,16 @@ $(document).ready(function () {
 </div>
 
 
-<p>This is an R Markdown website. To learn more:</p>
-<p><a href="http://rmarkdown.rstudio.com/rmarkdown_websites.html" class="uri">http://rmarkdown.rstudio.com/rmarkdown_websites.html</a></p>
-<p>Source for this website:</p>
-<p><a href="https://github.com/jennybc/purrr-tutorial" class="uri">https://github.com/jennybc/purrr-tutorial</a></p>
-<p>Its home on the web:</p>
+<p>This is an <a href="http://rmarkdown.rstudio.com/rmarkdown_websites.html">R Markdown website</a>. The source can be found <a href="https://github.com/jennybc/purrr-tutorial">on GitHub</a> and its home on the web is here:</p>
 <p><a href="https://jennybc.github.io/purrr-tutorial" class="uri">https://jennybc.github.io/purrr-tutorial</a></p>
+<p>Materials created to support:</p>
+<ul>
+<li><a href="https://github.com/minisciencegirl/studyGroup/issues/131">2016-08-12 meeting</a> of the Vancouver R Study Group.<br />
+</li>
+<li><a href="http://stat545.com">STAT 545</a> Exploratory Data Analysis</li>
+<li><a href="http://www.calendar.ubc.ca/vancouver/courses.cfm?page=code&amp;code=DSCI">DSCI 523</a> Data Wrangling, part of the UBC Master of Data Science</li>
+</ul>
+<p>Versions of key packages:</p>
 <pre class="r"><code>devtools::session_info(c(&quot;purrr&quot;, &quot;repurrrsive&quot;))</code></pre>
 <pre><code>## Session info -------------------------------------------------------------</code></pre>
 <pre><code>##  setting  value                       
