--- a/more-resources.html
+++ b/more-resources.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Lessons and Examples</title>
+<title>More resources</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -178,10 +178,10 @@ $(document).ready(function () {
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="index.html">Home</a>
+  <a href="index.html">Lessons and examples</a>
 </li>
 <li>
-  <a href="topic-index.html">Lessons and examples</a>
+  <a href="more-resources.html">More resources</a>
 </li>
 <li>
   <a href="slides.html">Slides</a>
@@ -200,46 +200,22 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Lessons and Examples</h1>
+<h1 class="title toc-ignore">More resources</h1>
 
 </div>
 
 
-<p><em>more coming in the subsections below</em></p>
-<div id="background-basics" class="section level3">
-<h3>Background basics</h3>
+<p><img src="https://www.stickermule.com/marketplace/embed_img/13594" style="max-width:100%;"></p>
 <ul>
-<li><a href="bk00_vectors-and-lists.html">Vectors and lists</a><br />
-</li>
-<li><a href="bk01_base-functions.html">Relationship to base and plyr functions</a></li>
-</ul>
-</div>
-<div id="core-purrr-lessons" class="section level3">
-<h3>Core purrr lessons</h3>
+<li>On CRAN: <a href="https://CRAN.R-project.org/package=purrr" class="uri">https://CRAN.R-project.org/package=purrr</a></li>
+<li>Development on GitHub: <a href="https://github.com/hadley/purrr" class="uri">https://github.com/hadley/purrr</a></li>
+<li>Coverage in <a href="http://r4ds.had.co.nz">R for Data Science</a>
 <ul>
-<li><a href="ls01_map-basics.html">Basic mapping with Wes Anderson and Game of Thrones</a><br />
-</li>
-<li><a href="ls02_trump-tweets.html">Trump Android words</a> <em>suitable for a hands-on activity</em></li>
-<li><a href="ls03_github-api-json.html">Simplifying data from a list of GitHub users</a> <em>suitable for a hands-on activity</em></li>
-<li><a href="ls05_different-sized-samples.html">Sample from groups, n varies by group</a></li>
+<li><a href="http://r4ds.had.co.nz/iteration.html">Iteration</a></li>
+<li><a href="http://r4ds.had.co.nz/hierarchy.html">Handling hierarchy</a></li>
+<li><a href="http://r4ds.had.co.nz/many-models.html">Many models</a></li>
+</ul></li>
 </ul>
-</div>
-<div id="worked-examples" class="section level3">
-<h3>Worked examples</h3>
-<ul>
-<li><a href="ex20_bulk-gmail.html">Send email via Gmail API</a><br />
-</li>
-<li><a href="ex22_github-issues-pull-requests.html">Analyze GitHub issues and pull requests</a><br />
-</li>
-<li><a href="ex24_xml-wrangling.html">Tame XML from Google Sheets API</a></li>
-</ul>
-</div>
-<div id="patterns-and-anti-patterns" class="section level3">
-<h3>Patterns and anti-patterns</h3>
-<ul>
-<li><a href="pt00_gotchas.html">Gotchas</a></li>
-</ul>
-</div>
 
 <p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="by-nc.png" height="400" width="65"/></a></p>
 
