--- a/bk00_vectors-and-lists.html
+++ b/bk00_vectors-and-lists.html
@@ -275,10 +275,10 @@ div.tocify {
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="index.html">Home</a>
+  <a href="index.html">Lessons and examples</a>
 </li>
 <li>
-  <a href="topic-index.html">Lessons and examples</a>
+  <a href="more-resources.html">More resources</a>
 </li>
 <li>
   <a href="slides.html">Slides</a>
