--- a/ls05_different-sized-samples.html
+++ b/ls05_different-sized-samples.html
@@ -178,10 +178,10 @@ $(document).ready(function () {
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="index.html">Home</a>
+  <a href="index.html">Lessons and examples</a>
 </li>
 <li>
-  <a href="topic-index.html">Lessons and examples</a>
+  <a href="more-resources.html">More resources</a>
 </li>
 <li>
   <a href="slides.html">Slides</a>
