create page for list inspection

--- a/index.html
+++ b/index.html
@@ -207,14 +207,15 @@ $(document).ready(function () {
 <div id="background-basics" class="section level3">
 <h3>Background basics</h3>
 <ul>
-<li><a href="bk00_vectors-and-lists.html">Vectors and lists</a><br />
-</li>
+<li><a href="bk00_vectors-and-lists.html">Vectors and lists</a> <em>review of vectors, lists, and indexing</em></li>
 <li><a href="bk01_base-functions.html">Relationship to base and plyr functions</a></li>
 </ul>
 </div>
 <div id="core-purrr-lessons" class="section level3">
 <h3>Core purrr lessons</h3>
 <ul>
+<li><a href="ls00_inspect-explore.html">Inspect, explore: Wes Anderson, Game of Thrones, GitHub</a><br />
+</li>
 <li><a href="ls01_map-basics.html">Basic mapping with Wes Anderson and Game of Thrones</a><br />
 </li>
 <li><a href="ls02_trump-tweets.html">Trump Android words</a> <em>suitable for a hands-on activity</em></li>
