rename/reorganize, clean, rebuild

--- a/index.html
+++ b/index.html
@@ -214,13 +214,12 @@ $(document).ready(function () {
 <div id="core-purrr-lessons" class="section level3">
 <h3>Core purrr lessons</h3>
 <ul>
-<li><a href="ls00_inspect-explore.html">Inspect, explore: Wes Anderson, Game of Thrones, GitHub</a><br />
-</li>
-<li><a href="ls01_map-basics.html">Basic mapping with Wes Anderson and Game of Thrones</a><br />
-</li>
-<li><a href="ls02_trump-tweets.html">Trump Android words</a> <em>suitable for a hands-on activity</em></li>
-<li><a href="ls03_github-api-json.html">Simplifying data from a list of GitHub users</a> <em>suitable for a hands-on activity</em></li>
-<li><a href="ls05_different-sized-samples.html">Sample from groups, n varies by group</a></li>
+<li><a href="ls00_inspect-explore.html">Explore the example lists: Wes Anderson, Game of Thrones, GitHub</a> <em>how to get to know a list</em></li>
+<li><a href="ls01_map-name-position-shortcuts.html">Introduction to <code>map()</code>: extract elements</a> <em>name and position shortcuts, type-specific and simplifying map</em></li>
+<li><a href="ls02_map-extraction-advanced.html">Simplifying data from a list of GitHub users</a> <em>end to end: inspection, extraction and simplification, more advanced</em></li>
+<li><a href="ls03_map-function-syntax.html">Syntax for specifying the function to map</a> <em>all the purrr shortcuts</em></li>
+<li><a href="ls08_trump-tweets.html">Trump Android words</a> <em>suitable for a live-coding</em></li>
+<li><a href="ls12_different-sized-samples.html">Sample from groups, n varies by group</a></li>
 </ul>
 </div>
 <div id="worked-examples" class="section level3">
