--- a/ls08_trump-tweets.html
+++ b/ls08_trump-tweets.html
@@ -827,7 +827,7 @@ pmap(mdf, substring)
 #&gt;     names(y) &lt;- names(x)
 #&gt;     y
 #&gt; }
-#&gt; &lt;bytecode: 0x7ff2a0246588&gt;
+#&gt; &lt;bytecode: 0x7f8d9ad4c720&gt;
 #&gt; &lt;environment: namespace:base&gt;</code></pre>
 </div>
 
