how to specify the function .f

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ $(document).ready(function () {
 <h3>Background basics</h3>
 <ul>
 <li><a href="bk00_vectors-and-lists.html">Vectors and lists</a> <em>review of vectors, lists, and indexing</em></li>
-<li><a href="bk01_base-functions.html">Relationship to base and plyr functions</a></li>
+<li><a href="bk01_base-functions.html">Relationship to base and plyr functions</a> <em>for the skeptics</em></li>
 </ul>
 </div>
 <div id="core-purrr-lessons" class="section level3">
@@ -217,7 +217,7 @@ $(document).ready(function () {
 <li><a href="ls00_inspect-explore.html">Explore the example lists: Wes Anderson, Game of Thrones, GitHub</a> <em>how to get to know a list</em></li>
 <li><a href="ls01_map-name-position-shortcuts.html">Introduction to <code>map()</code>: extract elements</a> <em>name and position shortcuts, type-specific and simplifying map</em></li>
 <li><a href="ls02_map-extraction-advanced.html">Simplifying data from a list of GitHub users</a> <em>end to end: inspection, extraction and simplification, more advanced</em></li>
-<li><a href="ls03_map-function-syntax.html">Syntax for specifying the function to map</a> <em>all the purrr shortcuts</em></li>
+<li><a href="ls03_map-function-syntax.html">Specifying the function in map() + parallel mapping</a> <em>all the purrr shortcuts and mapping over multiple lists</em></li>
 <li><a href="ls08_trump-tweets.html">Trump Android words</a> <em>suitable for a live-coding</em></li>
 <li><a href="ls12_different-sized-samples.html">Sample from groups, n varies by group</a></li>
 </ul>
