stub for nested data frame

--- a/index.html
+++ b/index.html
@@ -219,7 +219,9 @@ $(document).ready(function () {
 <li><a href="ls02_map-extraction-advanced.html">Simplifying data from a list of GitHub users</a> <em>end to end: inspection, extraction and simplification, more advanced</em></li>
 <li><a href="ls03_map-function-syntax.html">Specifying the function in map() + parallel mapping</a> <em>all the purrr shortcuts and mapping over multiple lists</em></li>
 <li><a href="ls08_trump-tweets.html">Trump Android words</a> <em>suitable for a live-coding</em></li>
-<li><a href="ls12_different-sized-samples.html">Sample from groups, n varies by group</a></li>
+<li><a href="ls12_different-sized-samples.html">Sample from groups, n varies by group</a><br />
+</li>
+<li><a href="ls20_nested-data-frame.html">Nested data frames</a></li>
 </ul>
 </div>
 <div id="worked-examples" class="section level3">
